syntax = "proto3";

package user;

service UserService {
    rpc CreateUser(User) returns (CreateResponse) {}
    rpc GetUser(GetRequest) returns (GetResponse) {}
    rpc UpdateUser(User) returns (UpdateResponse) {}
    rpc DeleteUser(User) returns (DeleteResponse) {}
}

message User {
    string userID = 1;
    string firstName = 2;
    string lastName = 3;
    string dob = 4;
    string gender = 5;
    string university = 6;
    string email = 7;
    string phone = 8;
    Accounts accounts = 9;
}

message Accounts {
    repeated string accountID = 1;
}

// Create response

message CreateResponse {
    bool created = 1;
    User user = 2;
}

// Get request and response

message GetRequest {
    string userID = 1;
}

message GetResponse {
    repeated User users = 1;
}

// Update Response

message UpdateResponse {
    bool updated = 1;
    User user = 2;
}

// Delete request and response

message DeletedRequest {
    string userID = 1;
}

message DeleteResponse {
    bool deleted = 1;
}